fix scss overflow for pages

--- a/frontend/src/modals/Auth/Auth.scss
+++ b/frontend/src/modals/Auth/Auth.scss
@@ -52,8 +52,7 @@
     display: flex;
     flex-direction: column;
     align-content: flex-start;
-    // justify-content: space-between;
-    // align-items: center;
+    overflow-y: scroll;
 
     &_close {
       display: flex;
