--- a/frontend/src/pages/MarkdownSyntax/MarkdownSyntax.scss
+++ b/frontend/src/pages/MarkdownSyntax/MarkdownSyntax.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   height: 100%;
   width: 100%;
+  overflow-y: scroll;
 
   &_content {
     display: flex;
